fix details title overflow

--- a/ui/details.reel/details.css
+++ b/ui/details.reel/details.css
@@ -13,7 +13,7 @@
     padding: 0;
     font-size: 18px;
     line-height: 42px;
-    padding: 0 84px 0 12px;
+    padding: 0 105px 0 12px;
     height: 42px;
     background: -webkit-linear-gradient(top, hsla(0,0%,50%,.95), hsla(0,0%,25%,.95) );
     background: -moz-linear-gradient(top, hsla(0,0%,50%,.95), hsla(0,0%,25%,.95) );
